# fastapi-kit

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  AGENTS.md  CONCEPTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
admin/: FRONTEND.md  index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_audit_logs_table.py  003_create_alert_tables.py  004_add_audit_logs_request_id.py  005_creator_hub_tables.py  006_add_playground_calls.py  007_add_primary_platform_key.py  008_add_creator_media_assets.py
app/: __init__.py  cache.py  config.py  main.py  middleware.py
app/api/: deps.py
app/auth/: jwt.py
app/cache/: advanced_cache.py  redis.py
app/clients/: image_generation.py  llm.py  object_storage.py
app/core/: alert_keys.py  cache.py  celery_app.py  celery_keys.py  config.py  database.py  exceptions.py  health.py  logger.py  logging.py  metrics.py  middleware.py  rate_limit.py  roles.py  security.py  security_config.py  storage.py  websocket.py
app/creator/: __init__.py  checklists.py  pipelines.py  platform_prompts.py
app/db/: celery_dispatch.py  init_db.py  session.py
app/health/: diagnostics.py
app/models/: base.py  (+9 more)
config/: config.yaml
creator/: .gitignore  FRONTEND.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
design-plans/: creator-wizard-ai-adjust-chip-mint.md  creator-wizard-ai-panel-collapsed-title.md  creator-wizard-chrome-gap-dedupe.md  creator-wizard-hero-platform-once.md  creator-wizard-lock-note-by-reason.md  creator-wizard-merge-header-band.md
docker/: Caddyfile  Caddyfile.prod  Dockerfile.caddy  entrypoint.sh
docs/: admin-alert-webhook.md  creator-validation-playbook.md
examples/: client.py
prometheus/: prometheus.yml
scripts/: capture_creator_v2_prototypes.py  celery_start.sh  create_admin.py  gen_dev_certs.sh  init_dev.sh  promote_creator_pro.py  rolling_update.sh  start.ps1  start.sh  start_prod.sh  stop.sh
tests/: conftest.py  test_admin_celery_helpers.py  test_alert_webhook.py  test_auth_service.py  test_celery_beat.py  test_celery_dispatch.py  test_chat.py  test_client_ip.py  test_config.py  test_creator_media_asset_repository.py  test_exceptions.py  test_llm_client.py  test_logging.py  test_migration_status.py  test_multi_variant_parse.py  test_object_storage.py  test_redis_cache.py  test_request_id.py  test_scheduled_alerts.py  test_scheduled_heartbeat.py  test_security.py  test_security_tokens.py
(+432 files in other folders)
