[project]
name = "fastapi-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "langchain-ollama>=0.2.0",
    "loguru>=0.7.2",
    "mysqlclient>=2.2.6",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10.2",
    "pydantic-settings>=2.6.1",
    "python-jose>=3.3.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.18",
    "psutil>=6.1.0",
    "redis>=5.2.0",
    "prometheus-client>=0.21.0",
    "litellm>=1.53.1",
    "aiomysql>=0.2.0",
]
